--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,8 @@
   /* font-size: clamp(1rem, 1.05rem + 0.5vw, 1.125rem); */
   line-height: 1.5;
 }
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
 
 h1,
 h2,
@@ -46,16 +48,67 @@ button {
 }
 
 img {
-  display: block;
-  max-inline-size: 100%;
+width: 8rem;
 }
 body {
-  background: linear-gradient(
-    90deg,
-    rgb(119 0 255 / 39%),
-    rgb(0 212 255 / 25%)
-  );
-  font-family: system-ui, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+ 
+  font-family:"Playfair Display", system-ui, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
+  padding: 2rem;
+  background-color: #1C1C1C;
+  color: #C9A227;
+}
+header {
+  display: grid;
+  justify-content: center;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    'logo'
+    'nav';
+}
+.logo-container {
+  display: flex;
+  flex-direction: column;
+  grid-area: logo;
+  align-items: center;
+ height: 9rem;
+}
+.logo-container>h1{
+font-weight: bold;
+font-size: 2.5rem;
+}
+header > nav {
+  grid-area: nav;
+  display: flex;
+  justify-content: space-around;
+  width: 40rem;
+  height: 8rem;
+}
+header button{
+  border: none;
+  font-size: 1.5rem;
+  background:none;
+  cursor: pointer;
+  color: #F2F2F2;
+}
+button:hover{
+  color: #9b7e1e;
+
+}
+.content-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: 550;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.content-container img{
+  width: 75rem;
+}
+footer{
+  display: flex;
+  justify-content: space-around;
 }
